<resources>
    <string name="app_name">TransEscolar</string>
    <string name="intinerario">Intinerario</string>
    <string name="passageiros">Passageiros</string>
    <string name="escolas">Escolas</string>
    <string name="usu_rio">Usuário</string>
    <string name="pais">Pais</string>
    <string name="mapa">Mapa</string>
    <string name="todo">TODO</string>
    <string name="title_activity_intinerario">IntinerarioActivity</string>
    <string name="title_activity_maps_ex">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_file">br.com.pref_file</string>
    <string name="pref_user_name">br.com.pref_user_name</string>
    <string name="pref_user_status">br.com.pref_user_status</string>
    <string name="title_activity_editar_usuario">EditarUsuarioActivity</string>
    <string name="apelido">Apelido:</string>
    <string name="cpf">CPF</string>
    <string name="title_activity_driver_maps">Map</string>
</resources>
