<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="187dp"
        android:layout_height="126dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/busicon"
        android:id="@+id/logo"
        app:layout_constraintBottom_toTopOf="@+id/escolas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        android:contentDescription="TODO"
        />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/passageiros"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="218dp"
        android:onClick="passageiro"
        android:src="@drawable/children"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/user"
        app:layout_constraintEnd_toStartOf="@+id/escolas"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,OnClick"
        android:clickable="true"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/passageiros"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user"
        app:layout_constraintEnd_toEndOf="@+id/passageiros"
        app:layout_constraintStart_toStartOf="@+id/passageiros"
        app:layout_constraintTop_toBottomOf="@+id/passageiros"
        tools:ignore="MissingConstraints"
        />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/escolas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="218dp"
        android:src="@drawable/school"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/pais"
        app:layout_constraintEnd_toStartOf="@+id/intinerario"
        app:layout_constraintStart_toEndOf="@+id/passageiros"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,OnClick"
        android:onClick="escola"
        android:clickable="true"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="84dp"
        android:layout_height="22dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/escolas"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pais"
        app:layout_constraintEnd_toEndOf="@+id/escolas"
        app:layout_constraintStart_toStartOf="@+id/escolas"
        app:layout_constraintTop_toBottomOf="@+id/escolas"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/intinerario"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="218dp"
        android:src="@drawable/test"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/escolas"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,OnClick"
        android:onClick="intinerario"
        android:clickable="true"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/intinerario"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/intinerario"
        app:layout_constraintStart_toStartOf="@+id/intinerario"
        app:layout_constraintTop_toBottomOf="@+id/intinerario"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="59dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/user"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passageiros"
        tools:ignore="MissingConstraints,OnClick"
        android:onClick="usuario"
        android:clickable="true"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="73dp"
        android:layout_height="18dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/usu_rio"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/user"
        app:layout_constraintStart_toStartOf="@+id/user"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pais"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="59dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/family"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/map"
        app:layout_constraintStart_toEndOf="@+id/user"
        app:layout_constraintTop_toBottomOf="@+id/escolas"
        tools:ignore="MissingConstraints,OnClick"
        android:onClick="pais"
        android:clickable="true"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/pais"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pais"
        app:layout_constraintStart_toStartOf="@+id/pais"
        app:layout_constraintTop_toBottomOf="@+id/pais"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="59dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/maps"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pais"
        app:layout_constraintTop_toBottomOf="@+id/intinerario"
        tools:ignore="MissingConstraints,OnClick"
        android:onClick="mapa"
        android:clickable="true"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="66dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/mapa"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/map"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>